--- a/packages/auth-ng/package.json
+++ b/packages/auth-ng/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/auth-ng",
-  "version": "2.2.1-alpha.0",
+  "version": "2.2.1-dev.0",
   "description": "Angular for typexs",
   "main": "public_api.ts",
   "scripts": {
@@ -45,13 +45,13 @@
     "@angular/forms": "v12-lts",
     "@angular/router": "v12-lts",
     "@typexs/auth": "^2.2.1-alpha.0",
-    "@typexs/base-ng": "^2.2.1-alpha.0",
+    "@typexs/base-ng": "^2.2.1-dev.0",
     "@typexs/entity": "^2.2.1-alpha.0",
-    "@typexs/entity-ng": "^2.2.1-alpha.0",
+    "@typexs/entity-ng": "^2.2.1-dev.0",
     "@typexs/forms": "^2.2.1-alpha.0",
-    "@typexs/forms-ng": "^2.2.1-alpha.0",
-    "@typexs/ng": "^2.2.1-alpha.0",
-    "@typexs/ng-theme-base": "^2.2.1-alpha.0",
+    "@typexs/forms-ng": "^2.2.1-dev.0",
+    "@typexs/ng": "^2.2.1-dev.0",
+    "@typexs/ng-theme-base": "^2.2.1-dev.0",
     "@typexs/roles": "^2.2.1-alpha.0",
     "@typexs/roles-api": "^2.2.1-alpha.0",
     "@typexs/server": "^2.2.1-alpha.0",
