--- a/packages/ng-theme-base/package.json
+++ b/packages/ng-theme-base/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/ng-theme-base",
-  "version": "2.2.1-alpha.0",
+  "version": "2.2.1-dev.0",
   "description": "Angular for typexs",
   "main": "./public_api.ts",
   "scripts": {
@@ -39,8 +39,8 @@
   },
   "devDependencies": {
     "@typexs/base": "^2.2.1-alpha.0",
-    "@typexs/base-ng": "^2.2.1-alpha.0",
-    "@typexs/forms-ng": "^2.2.1-alpha.0",
+    "@typexs/base-ng": "^2.2.1-dev.0",
+    "@typexs/forms-ng": "^2.2.1-dev.0",
     "@typexs/ng-router-menu": "^2.2.1-alpha.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.1",
