--- a/packages/notification/package.json
+++ b/packages/notification/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@typexs/notification",
-  "version": "2.2.0",
+  "version": "2.2.1-dev.0",
   "main": "index",
   "browser": "browser",
   "typexs": {
     "name": "pipeline"
   },
   "devDependencies": {
-    "@typexs/base": "*",
+    "@typexs/base": "^2.2.1-dev.0",
     "winston-transport": "^4.4.0"
   },
   "peerDependencies": {
