--- a/packages/search-ng/package.json
+++ b/packages/search-ng/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/search-ng",
-  "version": "2.2.1-alpha.0",
+  "version": "2.2.1-dev.0",
   "description": "Angular for typexs",
   "main": "./public_api.ts",
   "scripts": {
@@ -31,10 +31,10 @@
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/base-ng": "^2.2.1-alpha.0",
-    "@typexs/forms-ng": "^2.2.1-alpha.0",
+    "@typexs/base-ng": "^2.2.1-dev.0",
+    "@typexs/forms-ng": "^2.2.1-dev.0",
     "@typexs/search": "^2.2.1-alpha.0",
-    "@typexs/storage-ng": "^2.2.1-alpha.0",
+    "@typexs/storage-ng": "^2.2.1-dev.0",
     "lodash": "4.17.21",
     "rxjs": "6.6.7"
   }
