--- a/packages/auth-ng/package.json
+++ b/packages/auth-ng/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/auth-ng",
-  "version": "2.2.1-dev.0",
+  "version": "2.2.1-dev.7",
   "description": "Angular for typexs",
   "main": "public_api.ts",
   "scripts": {
@@ -29,32 +29,32 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "peerDependencies": {
-    "@typexs/auth": "*",
     "@typexs/base-ng": "*",
+    "@typexs/ng": "*",
+    "@typexs/forms-ng": "*",
+    "@typexs/forms": "*",
     "@typexs/entity": "*",
     "@typexs/entity-ng": "*",
-    "@typexs/forms": "*",
-    "@typexs/forms-ng": "*",
-    "@typexs/ng": "*",
+    "@typexs/auth": "*",
     "@typexs/ng-theme-base": "*",
     "@typexs/roles-api": "*"
   },
   "devDependencies": {
-    "@angular/common": "v12-lts",
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
+    "@angular/common": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/auth": "^2.2.1-alpha.0",
-    "@typexs/base-ng": "^2.2.1-dev.0",
-    "@typexs/entity": "^2.2.1-alpha.0",
-    "@typexs/entity-ng": "^2.2.1-dev.0",
-    "@typexs/forms": "^2.2.1-alpha.0",
-    "@typexs/forms-ng": "^2.2.1-dev.0",
-    "@typexs/ng": "^2.2.1-dev.0",
-    "@typexs/ng-theme-base": "^2.2.1-dev.0",
-    "@typexs/roles": "^2.2.1-alpha.0",
-    "@typexs/roles-api": "^2.2.1-alpha.0",
-    "@typexs/server": "^2.2.1-alpha.0",
+    "@typexs/base-ng": "*",
+    "@typexs/ng": "*",
+    "@typexs/forms-ng": "*",
+    "@typexs/forms": "*",
+    "@typexs/entity": "*",
+    "@typexs/entity-ng": "*",
+    "@typexs/auth": "*",
+    "@typexs/ng-theme-base": "*",
+    "@typexs/roles-api": "*",
+    "@typexs/roles": "*",
+    "@typexs/server": "*",
     "rxjs": "6.6.7"
   }
 }
