--- a/packages/distributed-storage-ng/package.json
+++ b/packages/distributed-storage-ng/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/distributed-storage-ng",
-  "version": "2.2.1-dev.0",
+  "version": "2.2.1-dev.7",
   "description": "Angular for typexs",
   "main": "public_api.ts",
   "scripts": {
@@ -30,20 +30,20 @@
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "peerDependencies": {
     "@typexs/base-ng": "*",
-    "@typexs/distributed-storage": "*",
+    "@typexs/ng": "*",
     "@typexs/forms-ng": "*",
-    "@typexs/ng": "*"
+    "@typexs/distributed-storage": "*"
   },
   "devDependencies": {
-    "@angular/common": "v12-lts",
+    "@typexs/distributed-storage": "*",
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
+    "@angular/common": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/base": "^2.2.1-alpha.0",
-    "@typexs/base-ng": "^2.2.1-dev.0",
-    "@typexs/distributed-storage": "^2.2.1-alpha.0",
-    "@typexs/forms-ng": "^2.2.1-dev.0",
-    "@typexs/ng": "^2.2.1-dev.0",
+    "@typexs/base": "*",
+    "@typexs/base-ng": "*",
+    "@typexs/ng": "*",
+    "@typexs/forms-ng": "*",
     "rxjs": "6.6.7"
   }
 }
