--- a/packages/entity/package.json
+++ b/packages/entity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/entity",
-  "version": "2.2.1-alpha.0",
+  "version": "2.2.1-dev.7",
   "description": "Schema for typexs",
   "main": "index",
   "browser": "browser",
@@ -28,19 +28,19 @@
   },
   "homepage": "https://gitlab.com/typexs/entity",
   "dependencies": {
-    "@typexs/roles-api": "^2.2.1-alpha.0"
+    "@typexs/roles-api": "*"
   },
   "devDependencies": {
-    "@typexs/base": "^2.2.1-alpha.0",
-    "@typexs/forms": "^2.2.1-alpha.0",
-    "@typexs/pipelines": "^2.2.1-alpha.0",
-    "@typexs/server": "^2.2.1-alpha.0",
-    "@typexs/storage": "^2.2.1-alpha.0",
-    "@typexs/testing": "^2.2.1-alpha.0"
+    "@typexs/base": "*",
+    "@typexs/pipelines": "*",
+    "@typexs/server": "*",
+    "@typexs/storage": "*",
+    "@typexs/testing": "*",
+    "@typexs/forms": "*"
   },
   "peerDependencies": {
-    "@typexs/base": "*",
     "@typexs/forms": "*",
+    "@typexs/base": "*",
     "@typexs/pipelines": "*",
     "@typexs/server": "*",
     "@typexs/storage": "*"
