--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/forms",
-  "version": "2.2.1-dev.0",
+  "version": "2.2.1-dev.7",
   "description": "Forms for typexs",
   "main": "index",
   "browser": "browser",
@@ -27,10 +27,12 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs",
   "dependencies": {
-    "@typexs/base": "^2.2.1-dev.0"
+    "@typexs/base": "*"
   },
   "devDependencies": {
-    "@typexs/testing": "^2.2.1-dev.0"
+    "@typexs/testing": "*"
+  },
+  "peerDependencies": {
   },
   "typexs": {
     "name": "forms"
