--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/search",
-  "version": "2.2.1-alpha.0",
+  "version": "2.2.1-dev.7",
   "description": "",
   "main": "index",
   "browser": "browser",
@@ -11,15 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@typexs/base": "^2.2.1-alpha.0",
-    "@typexs/entity": "^2.2.1-alpha.0",
-    "@typexs/pipelines": "^2.2.1-alpha.0",
-    "@typexs/roles-api": "^2.2.1-alpha.0"
+    "@typexs/base": "*",
+    "@typexs/entity": "*",
+    "@typexs/pipelines": "*",
+    "@typexs/roles-api": "*"
   },
   "devDependencies": {
     "@elastic/elasticsearch": "^7.15.0",
-    "@typexs/server": "^2.2.1-alpha.0",
-    "@typexs/storage": "^2.2.1-alpha.0"
+    "@typexs/server": "*",
+    "@typexs/storage": "*"
   },
   "peerDependencies": {
     "@elastic/elasticsearch": "^7.15.0"
