--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/server",
-  "version": "2.2.1-dev.0",
+  "version": "2.2.1-dev.7",
   "description": "Servers for typexs",
   "main": "./index",
   "browser": "./browser",
@@ -29,14 +29,14 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "dependencies": {
-    "@typexs/roles-api": "^2.2.1-dev.0"
+    "@typexs/roles-api": "*"
   },
   "devDependencies": {
-    "@typexs/base": "^2.2.1-dev.0",
-    "@typexs/testing": "^2.2.1-dev.0",
+    "@typexs/base": "*",
     "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
-    "routing-controllers": "0.9.0"
+    "routing-controllers": "0.9.0",
+    "@typexs/testing": "*"
   },
   "peerDependencies": {
     "@typexs/base": "*",
