--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/base",
-  "version": "2.2.1-dev.7",
+  "version": "2.2.1-dev.8",
   "description": "",
   "main": "index",
   "browser": "browser",
@@ -41,11 +41,11 @@
     "typedi": "0.8.0"
   },
   "devDependencies": {
+    "@typexs/testing": "*",
     "typeorm": "0.2.34",
     "winston": "3.3.3",
     "yargonaut": "1.1.4",
-    "yargs": "17.2.1",
-    "@typexs/testing": "*"
+    "yargs": "17.2.1"
   },
   "peerDependencies": {
     "typeorm": "0.2.34",
