--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/server",
-  "version": "2.2.1-dev.7",
+  "version": "2.2.1-dev.8",
   "description": "Servers for typexs",
   "main": "./index",
   "browser": "./browser",
@@ -33,10 +33,10 @@
   },
   "devDependencies": {
     "@typexs/base": "*",
+    "@typexs/testing": "*",
     "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
-    "routing-controllers": "0.9.0",
-    "@typexs/testing": "*"
+    "routing-controllers": "0.9.0"
   },
   "peerDependencies": {
     "@typexs/base": "*",
