--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/storage",
-  "version": "2.2.1-dev.7",
+  "version": "2.2.1-dev.8",
   "description": "Storage for typexs",
   "main": "./index",
   "browser": "./browser",
@@ -31,14 +31,14 @@
   },
   "devDependencies": {
     "@typexs/base": "*",
-    "@typexs/server": "*",
     "@typexs/forms": "*",
+    "@typexs/server": "*",
     "@typexs/testing": "*"
   },
   "peerDependencies": {
     "@typexs/base": "*",
-    "@typexs/server": "*",
-    "@typexs/forms": "*"
+    "@typexs/forms": "*",
+    "@typexs/server": "*"
   },
   "typexs": {
     "name": "storage",
