build: work on build

--- a/packages/base-ng/package.json
+++ b/packages/base-ng/package.json
@@ -8,6 +8,9 @@
     "test": "ng test --code-coverage=true --watch=false",
     "build": "ng build"
   },
+  "publishConfig": {
+    "directory": "./build/package"
+  },
   "directories": {
     "doc": "docs/de"
   },
