--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,8 @@
   "useWorkspaces": true,
   "version": "independent",
   "contents": "src",
+  "distTag": "v2-dev",
+  "verbose": true,
   "independent": true,
   "command": {
     "version": {
