--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "test": "npx lerna run test --concurrency=1",
     "build": "npx lerna run build",
     "version": "npx lerna version",
-    "postversion": "npx lerna run build",
-    "publish": "npx lerna run build && npx lerna publish --contents build/package --no-private",
+    "publish": "npx lerna publish --contents build/package --no-private",
     "documentation": "npx gulp docs-generate",
     "documentation:watch": "npx gulp watch-doc"
   },
