--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postinstall": "npx lerna link",
     "test": "npx lerna run test --concurrency=1",
     "build": "npx lerna run build",
-    "publish": "npx lerna publish --contents build/package --no-private",
+    "publish": "npx lerna publish",
     "documentation": "npx gulp docs-generate",
     "documentation:watch": "npx gulp watch-doc"
   },
