--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npx concurrently \"cd packages/app && npx ng serve\" \"npx typexs server --nodeId server\"",
     "postinstall": "npx lerna link",
     "test": "npx lerna run test --concurrency=1",
-    "build": "npx lerna run build",
+    "build": "npx lerna run build --concurrency=1",
     "publish": "npx lerna run publish",
     "documentation": "npx gulp docs-generate",
     "documentation:watch": "npx gulp watch-doc"
