--- a/packages/base-ng/package.json
+++ b/packages/base-ng/package.json
@@ -5,6 +5,7 @@
   "description": "Angular for typexs",
   "main": "public_api.ts",
   "scripts": {
+    "clean": "rm -rf build node_modules/.cache",
     "test": "ng test --code-coverage=true --watch=false",
     "build": "ng build"
   },
@@ -46,5 +47,5 @@
     "@typexs/server": "*",
     "rxjs": "6.6.7"
   },
-  "gitHead": "fa0ea8d60470bb9f72960742a07891628b66f0c1"
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
