--- a/packages/distributed-storage-ng/package.json
+++ b/packages/distributed-storage-ng/package.json
@@ -45,5 +45,6 @@
     "@typexs/forms-ng": "*",
     "@typexs/ng": "*",
     "rxjs": "6.6.7"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
