--- a/packages/entity-ng/package.json
+++ b/packages/entity-ng/package.json
@@ -49,5 +49,6 @@
     "@typexs/ng": "*",
     "chai": "4.3.4",
     "rxjs": "6.6.7"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
