--- a/packages/forms-ng/package.json
+++ b/packages/forms-ng/package.json
@@ -43,5 +43,6 @@
     "@typexs/entity": "*",
     "@typexs/forms": "*",
     "rxjs": "6.6.7"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
