--- a/packages/ng-admin-ui/package.json
+++ b/packages/ng-admin-ui/package.json
@@ -53,5 +53,6 @@
     "@typexs/storage-ng": "*",
     "@typexs/tasks-ng": "*",
     "rxjs": "6.6.7"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
