--- a/packages/ng-router-menu/package.json
+++ b/packages/ng-router-menu/package.json
@@ -35,5 +35,6 @@
     "@angular/router": "v12-lts",
     "lodash": "4.17.21",
     "rxjs": "6.6.7"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
