--- a/packages/ng-theme-base/package.json
+++ b/packages/ng-theme-base/package.json
@@ -45,5 +45,6 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.1",
     "perfect-scrollbar": "^1.5.1"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
