--- a/packages/ng/package.json
+++ b/packages/ng/package.json
@@ -6,7 +6,8 @@
   "browser": "browser",
   "scripts": {
     "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
-    "posttest": "nyc report --reporter=json"
+    "posttest": "nyc report --reporter=json",
+    "build": "node ../../scripts/build.js"
   },
   "directories": {
     "doc": "docs/de"
@@ -36,5 +37,6 @@
   },
   "peerDependencies": {
     "@typexs/base": "*"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
