--- a/packages/notification/package.json
+++ b/packages/notification/package.json
@@ -13,5 +13,6 @@
   "peerDependencies": {
     "@typexs/base": "*",
     "winston-transport": "^4.4.0"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
