--- a/packages/pipelines/package.json
+++ b/packages/pipelines/package.json
@@ -3,6 +3,11 @@
   "version": "2.2.1-dev.8",
   "main": "./index",
   "browser": "./browser",
+  "scripts": {
+    "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
+    "posttest": "nyc report --reporter=json",
+    "build": "node ../../scripts/build.js"
+  },
   "dependencies": {
     "sha1": "^1.1.1"
   },
@@ -30,5 +35,6 @@
         ]
       }
     ]
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
