--- a/packages/roles-api/package.json
+++ b/packages/roles-api/package.json
@@ -3,6 +3,11 @@
   "version": "2.2.1-dev.8",
   "description": "",
   "main": "./index",
+  "scripts": {
+    "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
+    "posttest": "nyc report --reporter=json",
+    "build": "node ../../scripts/build.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://gitlab.com/typexs/typexs.git"
@@ -17,5 +22,6 @@
   },
   "typexs": {
     "name": "roles-api"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
