--- a/packages/roles/package.json
+++ b/packages/roles/package.json
@@ -6,7 +6,8 @@
   "browser": "./browser",
   "scripts": {
     "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
-    "posttest": "nyc report --reporter=json"
+    "posttest": "nyc report --reporter=json",
+    "build": "node ../../scripts/build.js"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,6 @@
   },
   "typexs": {
     "name": "roles"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
