--- a/packages/roles/tsconfig.json
+++ b/packages/roles/tsconfig.json
@@ -1,3 +1,10 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./build/package",
+    "rootDir": "./src"
+  },
+  "include": [
+    "./src"
+  ]
 }
