--- a/packages/search-ng/package.json
+++ b/packages/search-ng/package.json
@@ -37,5 +37,6 @@
     "@typexs/storage-ng": "*",
     "lodash": "4.17.21",
     "rxjs": "6.6.7"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
