--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -6,7 +6,8 @@
   "browser": "browser",
   "scripts": {
     "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
-    "posttest": "nyc report --reporter=json"
+    "posttest": "nyc report --reporter=json",
+    "build": "node ../../scripts/build.js"
   },
   "author": "",
   "license": "ISC",
@@ -35,5 +36,6 @@
         ]
       }
     ]
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
