--- a/packages/storage-ng/package.json
+++ b/packages/storage-ng/package.json
@@ -49,5 +49,6 @@
     "@typexs/storage": "*",
     "lodash": "4.17.21",
     "rxjs": "6.6.7"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
