--- a/packages/tasks-ng/package.json
+++ b/packages/tasks-ng/package.json
@@ -38,5 +38,6 @@
     "@typexs/server": "*",
     "@typexs/storage-ng": "*",
     "rxjs": "6.6.7"
-  }
+  },
+  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
 }
