--- a/packages/notification/package.json
+++ b/packages/notification/package.json
@@ -6,6 +6,11 @@
   "typexs": {
     "name": "pipeline"
   },
+  "scripts": {
+    "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
+    "posttest": "nyc report --reporter=json",
+    "build": "node ../../scripts/build.js"
+  },
   "devDependencies": {
     "@typexs/base": "*",
     "winston-transport": "^4.4.0"
@@ -14,5 +19,5 @@
     "@typexs/base": "*",
     "winston-transport": "^4.4.0"
   },
-  "gitHead": "a28a29fc7cf7096dabac0f22796c17fcba9dd097"
+  "gitHead": "c621b8f67c1c1623c8047a88c65bcf911d77e2dc"
 }
