--- a/lerna.json
+++ b/lerna.json
@@ -23,6 +23,7 @@
     "publish": {
       "noPush": true,
       "private": false,
+      "gitReset": true,
       "distTag": "v2-dev",
       "contents": "build/package"
     }
