--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,8 @@ build ldap image:
       --dockerfile="${CI_PROJECT_DIR}/services/ldap/Dockerfile"
       --destination "${CI_REGISTRY_IMAGE}/ldap"
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "push"'
+    - if: '$CI_PIPELINE_SOURCE == "schedule" && $JOB_NAME == "update image"'
+    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG'
       changes:
         - .gitlab-ci.yml
         - services/ldap/**/*
