--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,7 +96,7 @@ test:
     - docker network disconnect testing_txs_base_net $CONTAINER_ID
     - docker compose -f deployments/testing/docker-compose.yml down
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG == ""'
+    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG == null'
       changes:
         - .gitlab-ci.yml
         - package.json
