--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "browser": "browser.js",
   "scripts": {
     "start": "npx concurrently \"cd packages/app && npx ng serve\" \"npx typexs server --nodeId server\"",
+    "clean": "npx lerna run clean && npx lerna clean -y ",
     "postinstall": "npx lerna link",
     "test": "npx lerna run test --concurrency=1",
-    "build": "npx lerna run build --concurrency=1",
+    "build": "npx lerna run build",
     "publish": "npx lerna publish from-package",
     "documentation": "npx antora --stacktrace generate --clean --fetch --log-level all --to-dir docs/build/site",
     "documentation:watch": "npx nodemon --watch docs -e adoc --exec npm run documentation -- docs/antora-playbook.yml"
