--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -5,6 +5,7 @@
   "main": "index",
   "browser": "browser",
   "scripts": {
+    "clean": "rm -rf build node_modules/.cache",
     "build": "node ../../scripts/build.js",
     "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
     "posttest": "nyc report --reporter=json",
