--- a/packages/entity-ng/package.json
+++ b/packages/entity-ng/package.json
@@ -5,6 +5,7 @@
   "description": "Angular for typexs",
   "main": "public_api.ts",
   "scripts": {
+    "clean": "rm -rf build node_modules/.cache",
     "test": "ng test --code-coverage=true --watch=false",
     "build": "ng build"
   },
