--- a/packages/notification/package.json
+++ b/packages/notification/package.json
@@ -7,6 +7,7 @@
     "name": "pipeline"
   },
   "scripts": {
+    "clean": "rm -rf build node_modules/.cache",
     "test": "nyc mocha test/{**,**/**,**/**/**}/*.spec.ts",
     "posttest": "nyc report --reporter=json",
     "build": "node ../../scripts/build.js"
