--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,7 @@ pages:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $JOB_NAME == "update docs"'
     - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG'
+    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_BRANCH == "master"'
       changes:
         - .gitlab-ci.yml
         - docs/**
