--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -2,19 +2,18 @@
   "name": "app",
   "version": "1.0.0",
   "devDependencies": {
-    "@typexs/base": "*",
-    "@typexs/base-ng": "*",
-    "@typexs/storage-ng": "*",
-    "@typexs/search-ng": "*",
-    "@typexs/storage": "*",
-    "@typexs/forms-ng": "*",
-    "@typexs/forms": "*",
-    "@typexs/entity": "*",
-    "@typexs/entity-ng": "*",
-    "@typexs/distributed-storage-ng": "*",
-    "@typexs/tasks-ng": "*"
+    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/base-ng": "2.2.1-dev.16",
+    "@typexs/storage-ng": "2.2.1-dev.13",
+    "@typexs/search-ng": "2.2.1-dev.15",
+    "@typexs/storage": "2.2.1-dev.13",
+    "@typexs/forms-ng": "2.2.1-dev.13",
+    "@typexs/forms": "2.2.1-dev.13",
+    "@typexs/entity": "2.2.1-dev.13",
+    "@typexs/entity-ng": "2.2.1-dev.13",
+    "@typexs/distributed-storage-ng": "2.2.1-dev.13",
+    "@typexs/tasks-ng": "2.2.1-dev.13"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "private": true
 }
