--- a/packages/base-ng/package.json
+++ b/packages/base-ng/package.json
@@ -33,18 +33,18 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "peerDependencies": {
-    "@typexs/base": "*",
-    "@typexs/ng": "*",
-    "@typexs/server": "*"
+    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/ng": "2.2.1-dev.13",
+    "@typexs/server": "2.2.1-dev.13"
   },
   "devDependencies": {
     "@angular/common": "v12-lts",
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/base": "*",
-    "@typexs/ng": "*",
-    "@typexs/server": "*",
+    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/ng": "2.2.1-dev.13",
+    "@typexs/server": "2.2.1-dev.13",
     "rxjs": "6.6.7"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
