--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -46,7 +46,7 @@
     "typedi": "0.8.0"
   },
   "devDependencies": {
-    "@typexs/testing": "*",
+    "@typexs/testing": "2.2.1-dev.13",
     "typeorm": "0.2.34",
     "winston": "3.3.3",
     "yargonaut": "1.1.4",
