--- a/packages/distributed-storage/package.json
+++ b/packages/distributed-storage/package.json
@@ -21,18 +21,18 @@
   "author": "Robert Kania",
   "license": "MIT",
   "dependencies": {
-    "@typexs/roles-api": "*"
+    "@typexs/roles-api": "2.2.1-dev.13"
   },
   "devDependencies": {
-    "@typexs/base": "*",
-    "@typexs/pipelines": "*",
-    "@typexs/server": "*",
-    "@typexs/testing": "*"
+    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/pipelines": "2.2.1-dev.13",
+    "@typexs/server": "2.2.1-dev.13",
+    "@typexs/testing": "2.2.1-dev.13"
   },
   "peerDependencies": {
-    "@typexs/base": "*",
-    "@typexs/pipelines": "*",
-    "@typexs/server": "*"
+    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/pipelines": "2.2.1-dev.13",
+    "@typexs/server": "2.2.1-dev.13"
   },
   "typexs": {
     "name": "distributed-storage"
