--- a/packages/entity/package.json
+++ b/packages/entity/package.json
@@ -30,22 +30,22 @@
   },
   "homepage": "https://gitlab.com/typexs/entity",
   "dependencies": {
-    "@typexs/roles-api": "*"
+    "@typexs/roles-api": "2.2.1-dev.13"
   },
   "devDependencies": {
-    "@typexs/base": "*",
-    "@typexs/forms": "*",
-    "@typexs/pipelines": "*",
-    "@typexs/server": "*",
-    "@typexs/storage": "*",
-    "@typexs/testing": "*"
+    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/forms": "2.2.1-dev.13",
+    "@typexs/pipelines": "2.2.1-dev.13",
+    "@typexs/server": "2.2.1-dev.13",
+    "@typexs/storage": "2.2.1-dev.13",
+    "@typexs/testing": "2.2.1-dev.13"
   },
   "peerDependencies": {
-    "@typexs/base": "*",
-    "@typexs/forms": "*",
-    "@typexs/pipelines": "*",
-    "@typexs/server": "*",
-    "@typexs/storage": "*"
+    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/forms": "2.2.1-dev.13",
+    "@typexs/pipelines": "2.2.1-dev.13",
+    "@typexs/server": "2.2.1-dev.13",
+    "@typexs/storage": "2.2.1-dev.13"
   },
   "typexs": {
     "name": "typexs-entity"
