--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,17 +31,17 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "dependencies": {
-    "@typexs/roles-api": "*"
+    "@typexs/roles-api": "2.2.1-dev.13"
   },
   "devDependencies": {
-    "@typexs/base": "*",
-    "@typexs/testing": "*",
+    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/testing": "2.2.1-dev.13",
     "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
     "routing-controllers": "0.9.0"
   },
   "peerDependencies": {
-    "@typexs/base": "*",
+    "@typexs/base": "2.2.1-dev.22",
     "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
     "routing-controllers": "0.9.0"
