--- a/packages/storage-ng/package.json
+++ b/packages/storage-ng/package.json
@@ -30,24 +30,24 @@
   },
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
-    "@typexs/base": "*",
-    "@typexs/base-ng": "*",
-    "@typexs/forms": "*",
-    "@typexs/forms-ng": "*",
-    "@typexs/ng": "*",
-    "@typexs/storage": "*"
+    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/base-ng": "2.2.1-dev.16",
+    "@typexs/forms": "2.2.1-dev.13",
+    "@typexs/forms-ng": "2.2.1-dev.13",
+    "@typexs/ng": "2.2.1-dev.13",
+    "@typexs/storage": "2.2.1-dev.13"
   },
   "devDependencies": {
     "@angular/common": "v12-lts",
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/base": "*",
-    "@typexs/base-ng": "*",
-    "@typexs/forms": "*",
-    "@typexs/forms-ng": "*",
-    "@typexs/ng": "*",
-    "@typexs/storage": "*",
+    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/base-ng": "2.2.1-dev.16",
+    "@typexs/forms": "2.2.1-dev.13",
+    "@typexs/forms-ng": "2.2.1-dev.13",
+    "@typexs/ng": "2.2.1-dev.13",
+    "@typexs/storage": "2.2.1-dev.13",
     "lodash": "4.17.21",
     "rxjs": "6.6.7"
   },
