--- a/packages/tasks-ng/package.json
+++ b/packages/tasks-ng/package.json
@@ -22,22 +22,22 @@
     "typexs"
   ],
   "peerDependencies": {
-    "@typexs/base": "*",
-    "@typexs/base-ng": "*",
-    "@typexs/forms-ng": "*",
-    "@typexs/server": "*",
-    "@typexs/storage-ng": "*"
+    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/base-ng": "2.2.1-dev.16",
+    "@typexs/forms-ng": "2.2.1-dev.13",
+    "@typexs/server": "2.2.1-dev.13",
+    "@typexs/storage-ng": "2.2.1-dev.13"
   },
   "devDependencies": {
     "@angular/common": "v12-lts",
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/base": "*",
-    "@typexs/base-ng": "*",
-    "@typexs/forms-ng": "*",
-    "@typexs/server": "*",
-    "@typexs/storage-ng": "*",
+    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/base-ng": "2.2.1-dev.16",
+    "@typexs/forms-ng": "2.2.1-dev.13",
+    "@typexs/server": "2.2.1-dev.13",
+    "@typexs/storage-ng": "2.2.1-dev.13",
     "rxjs": "6.6.7"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
