--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -2,17 +2,17 @@
   "name": "app",
   "version": "1.0.0",
   "devDependencies": {
-    "@typexs/base": "2.2.1-dev.22",
-    "@typexs/base-ng": "2.2.1-dev.16",
-    "@typexs/storage-ng": "2.2.1-dev.13",
-    "@typexs/search-ng": "2.2.1-dev.15",
-    "@typexs/storage": "2.2.1-dev.13",
-    "@typexs/forms-ng": "2.2.1-dev.13",
-    "@typexs/forms": "2.2.1-dev.13",
-    "@typexs/entity": "2.2.1-dev.13",
-    "@typexs/entity-ng": "2.2.1-dev.13",
-    "@typexs/distributed-storage-ng": "2.2.1-dev.13",
-    "@typexs/tasks-ng": "2.2.1-dev.13"
+    "@typexs/base": "^2.2.1-dev.22",
+    "@typexs/base-ng": "^2.2.1-dev.16",
+    "@typexs/storage-ng": "^2.2.1-dev.13",
+    "@typexs/search-ng": "^2.2.1-dev.15",
+    "@typexs/storage": "^2.2.1-dev.13",
+    "@typexs/forms-ng": "^2.2.1-dev.13",
+    "@typexs/forms": "^2.2.1-dev.13",
+    "@typexs/entity": "^2.2.1-dev.13",
+    "@typexs/entity-ng": "^2.2.1-dev.13",
+    "@typexs/distributed-storage-ng": "^2.2.1-dev.13",
+    "@typexs/tasks-ng": "^2.2.1-dev.13"
   },
   "dependencies": {},
   "private": true
