--- a/packages/auth-ng/package.json
+++ b/packages/auth-ng/package.json
@@ -30,32 +30,32 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "peerDependencies": {
-    "@typexs/auth": "2.2.1-dev.12",
-    "@typexs/base-ng": "2.2.1-dev.16",
-    "@typexs/entity": "2.2.1-dev.13",
-    "@typexs/entity-ng": "2.2.1-dev.13",
-    "@typexs/forms": "2.2.1-dev.13",
-    "@typexs/forms-ng": "2.2.1-dev.13",
-    "@typexs/ng": "2.2.1-dev.13",
-    "@typexs/ng-theme-base": "2.2.1-dev.13",
-    "@typexs/roles-api": "2.2.1-dev.13"
+    "@typexs/auth": "^2.2.1-dev.12",
+    "@typexs/base-ng": "^2.2.1-dev.16",
+    "@typexs/entity": "^2.2.1-dev.13",
+    "@typexs/entity-ng": "^2.2.1-dev.13",
+    "@typexs/forms": "^2.2.1-dev.13",
+    "@typexs/forms-ng": "^2.2.1-dev.13",
+    "@typexs/ng": "^2.2.1-dev.13",
+    "@typexs/ng-theme-base": "^2.2.1-dev.13",
+    "@typexs/roles-api": "^2.2.1-dev.13"
   },
   "devDependencies": {
     "@angular/common": "v12-lts",
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/auth": "2.2.1-dev.12",
-    "@typexs/base-ng": "2.2.1-dev.16",
-    "@typexs/entity": "2.2.1-dev.13",
-    "@typexs/entity-ng": "2.2.1-dev.13",
-    "@typexs/forms": "2.2.1-dev.13",
-    "@typexs/forms-ng": "2.2.1-dev.13",
-    "@typexs/ng": "2.2.1-dev.13",
-    "@typexs/ng-theme-base": "2.2.1-dev.13",
-    "@typexs/roles": "2.2.1-dev.13",
-    "@typexs/roles-api": "2.2.1-dev.13",
-    "@typexs/server": "2.2.1-dev.13",
+    "@typexs/auth": "^2.2.1-dev.12",
+    "@typexs/base-ng": "^2.2.1-dev.16",
+    "@typexs/entity": "^2.2.1-dev.13",
+    "@typexs/entity-ng": "^2.2.1-dev.13",
+    "@typexs/forms": "^2.2.1-dev.13",
+    "@typexs/forms-ng": "^2.2.1-dev.13",
+    "@typexs/ng": "^2.2.1-dev.13",
+    "@typexs/ng-theme-base": "^2.2.1-dev.13",
+    "@typexs/roles": "^2.2.1-dev.13",
+    "@typexs/roles-api": "^2.2.1-dev.13",
+    "@typexs/server": "^2.2.1-dev.13",
     "rxjs": "6.6.7"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
