--- a/packages/demo-task/package.json
+++ b/packages/demo-task/package.json
@@ -2,10 +2,10 @@
   "name": "testtask",
   "version": "1.0.1",
   "dependencies": {
-    "@typexs/base": "2.2.1-dev.22",
-    "@typexs/entity": "2.2.1-dev.13",
-    "@typexs/forms": "2.2.1-dev.13",
-    "@typexs/search": "2.2.1-dev.14"
+    "@typexs/base": "^2.2.1-dev.22",
+    "@typexs/entity": "^2.2.1-dev.13",
+    "@typexs/forms": "^2.2.1-dev.13",
+    "@typexs/search": "^2.2.1-dev.14"
   },
   "private": true,
   "typexs": {
