--- a/packages/distributed-storage-ng/package.json
+++ b/packages/distributed-storage-ng/package.json
@@ -30,21 +30,21 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "peerDependencies": {
-    "@typexs/base-ng": "2.2.1-dev.16",
-    "@typexs/distributed-storage": "2.2.1-dev.13",
-    "@typexs/forms-ng": "2.2.1-dev.13",
-    "@typexs/ng": "2.2.1-dev.13"
+    "@typexs/base-ng": "^2.2.1-dev.16",
+    "@typexs/distributed-storage": "^2.2.1-dev.13",
+    "@typexs/forms-ng": "^2.2.1-dev.13",
+    "@typexs/ng": "^2.2.1-dev.13"
   },
   "devDependencies": {
     "@angular/common": "v12-lts",
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/base": "2.2.1-dev.22",
-    "@typexs/base-ng": "2.2.1-dev.16",
-    "@typexs/distributed-storage": "2.2.1-dev.13",
-    "@typexs/forms-ng": "2.2.1-dev.13",
-    "@typexs/ng": "2.2.1-dev.13",
+    "@typexs/base": "^2.2.1-dev.22",
+    "@typexs/base-ng": "^2.2.1-dev.16",
+    "@typexs/distributed-storage": "^2.2.1-dev.13",
+    "@typexs/forms-ng": "^2.2.1-dev.13",
+    "@typexs/ng": "^2.2.1-dev.13",
     "rxjs": "6.6.7"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
