--- a/packages/ldap/package.json
+++ b/packages/ldap/package.json
@@ -27,17 +27,17 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs",
   "dependencies": {
-    "@typexs/roles-api": "2.2.1-dev.13",
+    "@typexs/roles-api": "^2.2.1-dev.13",
     "ldapjs": "2.3.3"
   },
   "devDependencies": {
-    "@typexs/base": "2.2.1-dev.22",
-    "@typexs/pipelines": "2.2.1-dev.13",
-    "@typexs/testing": "2.2.1-dev.13"
+    "@typexs/base": "^2.2.1-dev.22",
+    "@typexs/pipelines": "^2.2.1-dev.13",
+    "@typexs/testing": "^2.2.1-dev.13"
   },
   "peerDependencies": {
-    "@typexs/base": "2.2.1-dev.22",
-    "@typexs/pipelines": "2.2.1-dev.13"
+    "@typexs/base": "^2.2.1-dev.22",
+    "@typexs/pipelines": "^2.2.1-dev.13"
   },
   "typexs": {
     "name": "typexs-ldap"
