--- a/packages/ng-theme-base/package.json
+++ b/packages/ng-theme-base/package.json
@@ -30,19 +30,19 @@
   },
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
-    "@typexs/base": "2.2.1-dev.22",
-    "@typexs/base-ng": "2.2.1-dev.16",
-    "@typexs/forms-ng": "2.2.1-dev.13",
-    "@typexs/ng-router-menu": "2.2.1-dev.13",
+    "@typexs/base": "^2.2.1-dev.22",
+    "@typexs/base-ng": "^2.2.1-dev.16",
+    "@typexs/forms-ng": "^2.2.1-dev.13",
+    "@typexs/ng-router-menu": "^2.2.1-dev.13",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.1",
     "perfect-scrollbar": "^1.5.1"
   },
   "devDependencies": {
-    "@typexs/base": "2.2.1-dev.22",
-    "@typexs/base-ng": "2.2.1-dev.16",
-    "@typexs/forms-ng": "2.2.1-dev.13",
-    "@typexs/ng-router-menu": "2.2.1-dev.13",
+    "@typexs/base": "^2.2.1-dev.22",
+    "@typexs/base-ng": "^2.2.1-dev.16",
+    "@typexs/forms-ng": "^2.2.1-dev.13",
+    "@typexs/ng-router-menu": "^2.2.1-dev.13",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.1",
     "perfect-scrollbar": "^1.5.1"
