--- a/packages/ng/package.json
+++ b/packages/ng/package.json
@@ -31,13 +31,13 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "dependencies": {
-    "@typexs/roles-api": "2.2.1-dev.13"
+    "@typexs/roles-api": "^2.2.1-dev.13"
   },
   "devDependencies": {
-    "@typexs/base": "2.2.1-dev.22"
+    "@typexs/base": "^2.2.1-dev.22"
   },
   "peerDependencies": {
-    "@typexs/base": "2.2.1-dev.22"
+    "@typexs/base": "^2.2.1-dev.22"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
