--- a/packages/notification/package.json
+++ b/packages/notification/package.json
@@ -13,11 +13,11 @@
     "build": "node ../../scripts/build.js"
   },
   "devDependencies": {
-    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/base": "^2.2.1-dev.22",
     "winston-transport": "^4.4.0"
   },
   "peerDependencies": {
-    "@typexs/base": "2.2.1-dev.22",
+    "@typexs/base": "^2.2.1-dev.22",
     "winston-transport": "^4.4.0"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
