--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/auth",
-  "version": "2.2.1-dev.12",
+  "version": "2.2.1-dev.13",
   "description": "Auth module for typexs",
   "main": "index",
   "browser": "browser",
@@ -22,18 +22,18 @@
     "auth"
   ],
   "dependencies": {
-    "@typexs/base": "^2.2.1-dev.22",
-    "@typexs/entity": "^2.2.1-dev.13",
-    "@typexs/forms": "^2.2.1-dev.13",
-    "@typexs/ng": "^2.2.1-dev.13",
-    "@typexs/roles": "^2.2.1-dev.13",
-    "@typexs/roles-api": "^2.2.1-dev.13",
+    "@typexs/base": "2.2.1-dev.23",
+    "@typexs/entity": "2.2.1-dev.14",
+    "@typexs/forms": "2.2.1-dev.14",
+    "@typexs/ng": "2.2.1-dev.14",
+    "@typexs/roles": "2.2.1-dev.14",
+    "@typexs/roles-api": "2.2.1-dev.14",
     "bcrypt": "^5.0.0",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "@typexs/server": "^2.2.1-dev.13",
-    "@typexs/testing": "^2.2.1-dev.13"
+    "@typexs/server": "2.2.1-dev.14",
+    "@typexs/testing": "2.2.1-dev.14"
   },
   "peerDependencies": {
     "@typexs/server": "^2.2.1-dev.13"
