--- a/packages/distributed-storage-ng/package.json
+++ b/packages/distributed-storage-ng/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/distributed-storage-ng",
-  "version": "2.2.1-dev.13",
+  "version": "2.2.1-dev.14",
   "description": "Angular for typexs",
   "main": "public_api.ts",
   "scripts": {
@@ -40,11 +40,11 @@
     "@angular/core": "v12-lts",
     "@angular/forms": "v12-lts",
     "@angular/router": "v12-lts",
-    "@typexs/base": "^2.2.1-dev.22",
-    "@typexs/base-ng": "^2.2.1-dev.16",
-    "@typexs/distributed-storage": "^2.2.1-dev.13",
-    "@typexs/forms-ng": "^2.2.1-dev.13",
-    "@typexs/ng": "^2.2.1-dev.13",
+    "@typexs/base": "2.2.1-dev.23",
+    "@typexs/base-ng": "2.2.1-dev.17",
+    "@typexs/distributed-storage": "2.2.1-dev.14",
+    "@typexs/forms-ng": "2.2.1-dev.14",
+    "@typexs/ng": "2.2.1-dev.14",
     "rxjs": "6.6.7"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
