--- a/packages/distributed-storage/package.json
+++ b/packages/distributed-storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/distributed-storage",
-  "version": "2.2.1-dev.13",
+  "version": "2.2.1-dev.14",
   "description": "",
   "main": "index",
   "browser": "browser",
@@ -21,13 +21,13 @@
   "author": "Robert Kania",
   "license": "MIT",
   "dependencies": {
-    "@typexs/roles-api": "^2.2.1-dev.13"
+    "@typexs/roles-api": "2.2.1-dev.14"
   },
   "devDependencies": {
-    "@typexs/base": "^2.2.1-dev.22",
-    "@typexs/pipelines": "^2.2.1-dev.13",
-    "@typexs/server": "^2.2.1-dev.13",
-    "@typexs/testing": "^2.2.1-dev.13"
+    "@typexs/base": "2.2.1-dev.23",
+    "@typexs/pipelines": "2.2.1-dev.14",
+    "@typexs/server": "2.2.1-dev.14",
+    "@typexs/testing": "2.2.1-dev.14"
   },
   "peerDependencies": {
     "@typexs/base": "^2.2.1-dev.22",
