--- a/packages/entity/package.json
+++ b/packages/entity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/entity",
-  "version": "2.2.1-dev.13",
+  "version": "2.2.1-dev.14",
   "description": "Schema for typexs",
   "main": "index",
   "browser": "browser",
@@ -30,15 +30,15 @@
   },
   "homepage": "https://gitlab.com/typexs/entity",
   "dependencies": {
-    "@typexs/roles-api": "^2.2.1-dev.13"
+    "@typexs/roles-api": "2.2.1-dev.14"
   },
   "devDependencies": {
-    "@typexs/base": "^2.2.1-dev.22",
-    "@typexs/forms": "^2.2.1-dev.13",
-    "@typexs/pipelines": "^2.2.1-dev.13",
-    "@typexs/server": "^2.2.1-dev.13",
-    "@typexs/storage": "^2.2.1-dev.13",
-    "@typexs/testing": "^2.2.1-dev.13"
+    "@typexs/base": "2.2.1-dev.23",
+    "@typexs/forms": "2.2.1-dev.14",
+    "@typexs/pipelines": "2.2.1-dev.14",
+    "@typexs/server": "2.2.1-dev.14",
+    "@typexs/storage": "2.2.1-dev.14",
+    "@typexs/testing": "2.2.1-dev.14"
   },
   "peerDependencies": {
     "@typexs/base": "^2.2.1-dev.22",
