--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/forms",
-  "version": "2.2.1-dev.13",
+  "version": "2.2.1-dev.14",
   "description": "Forms for typexs",
   "main": "index",
   "browser": "browser",
@@ -29,10 +29,10 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs",
   "dependencies": {
-    "@typexs/base": "^2.2.1-dev.22"
+    "@typexs/base": "2.2.1-dev.23"
   },
   "devDependencies": {
-    "@typexs/testing": "^2.2.1-dev.13"
+    "@typexs/testing": "2.2.1-dev.14"
   },
   "typexs": {
     "name": "forms"
