--- a/packages/ldap/package.json
+++ b/packages/ldap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/ldap",
-  "version": "2.2.1-dev.13",
+  "version": "2.2.1-dev.14",
   "description": "LDAP storage for typexs",
   "main": "index",
   "browser": "browser",
@@ -27,13 +27,13 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs",
   "dependencies": {
-    "@typexs/roles-api": "^2.2.1-dev.13",
+    "@typexs/roles-api": "2.2.1-dev.14",
     "ldapjs": "2.3.3"
   },
   "devDependencies": {
-    "@typexs/base": "^2.2.1-dev.22",
-    "@typexs/pipelines": "^2.2.1-dev.13",
-    "@typexs/testing": "^2.2.1-dev.13"
+    "@typexs/base": "2.2.1-dev.23",
+    "@typexs/pipelines": "2.2.1-dev.14",
+    "@typexs/testing": "2.2.1-dev.14"
   },
   "peerDependencies": {
     "@typexs/base": "^2.2.1-dev.22",
