--- a/packages/ng-theme-base/package.json
+++ b/packages/ng-theme-base/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/ng-theme-base",
-  "version": "2.2.1-dev.13",
+  "version": "2.2.1-dev.14",
   "description": "Angular for typexs",
   "main": "./public_api.ts",
   "scripts": {
@@ -39,10 +39,10 @@
     "perfect-scrollbar": "^1.5.1"
   },
   "devDependencies": {
-    "@typexs/base": "^2.2.1-dev.22",
-    "@typexs/base-ng": "^2.2.1-dev.16",
-    "@typexs/forms-ng": "^2.2.1-dev.13",
-    "@typexs/ng-router-menu": "^2.2.1-dev.13",
+    "@typexs/base": "2.2.1-dev.23",
+    "@typexs/base-ng": "2.2.1-dev.17",
+    "@typexs/forms-ng": "2.2.1-dev.14",
+    "@typexs/ng-router-menu": "2.2.1-dev.14",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.1",
     "perfect-scrollbar": "^1.5.1"
