--- a/packages/ng/package.json
+++ b/packages/ng/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/ng",
-  "version": "2.2.1-dev.13",
+  "version": "2.2.1-dev.14",
   "description": "Angular for typexs",
   "main": "index",
   "browser": "browser",
@@ -31,10 +31,10 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "dependencies": {
-    "@typexs/roles-api": "^2.2.1-dev.13"
+    "@typexs/roles-api": "2.2.1-dev.14"
   },
   "devDependencies": {
-    "@typexs/base": "^2.2.1-dev.22"
+    "@typexs/base": "2.2.1-dev.23"
   },
   "peerDependencies": {
     "@typexs/base": "^2.2.1-dev.22"
