--- a/packages/notification/package.json
+++ b/packages/notification/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/notification",
-  "version": "2.2.1-dev.13",
+  "version": "2.2.1-dev.14",
   "main": "index",
   "browser": "browser",
   "typexs": {
@@ -13,7 +13,7 @@
     "build": "node ../../scripts/build.js"
   },
   "devDependencies": {
-    "@typexs/base": "^2.2.1-dev.22",
+    "@typexs/base": "2.2.1-dev.23",
     "winston-transport": "^4.4.0"
   },
   "peerDependencies": {
