--- a/packages/roles/package.json
+++ b/packages/roles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/roles",
-  "version": "2.2.1-dev.13",
+  "version": "2.2.1-dev.14",
   "description": "",
   "main": "./index",
   "browser": "./browser",
@@ -18,13 +18,13 @@
   "license": "MIT",
   "dependencies": {
     "@cezaryrk/minimatch": "^3.0.4",
-    "@typexs/roles-api": "^2.2.1-dev.13",
+    "@typexs/roles-api": "2.2.1-dev.14",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@typexs/base": "^2.2.1-dev.22",
-    "@typexs/entity": "^2.2.1-dev.13",
-    "@typexs/testing": "^2.2.1-dev.13"
+    "@typexs/base": "2.2.1-dev.23",
+    "@typexs/entity": "2.2.1-dev.14",
+    "@typexs/testing": "2.2.1-dev.14"
   },
   "peerDependencies": {
     "@typexs/base": "^2.2.1-dev.22",
