--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/search",
-  "version": "2.2.1-dev.14",
+  "version": "2.2.1-dev.15",
   "description": "",
   "main": "index",
   "browser": "browser",
@@ -13,15 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@typexs/base": "^2.2.1-dev.22",
-    "@typexs/entity": "^2.2.1-dev.13",
-    "@typexs/pipelines": "^2.2.1-dev.13",
-    "@typexs/roles-api": "^2.2.1-dev.13"
+    "@typexs/base": "2.2.1-dev.23",
+    "@typexs/entity": "2.2.1-dev.14",
+    "@typexs/pipelines": "2.2.1-dev.14",
+    "@typexs/roles-api": "2.2.1-dev.14"
   },
   "devDependencies": {
     "@elastic/elasticsearch": "^7.15.0",
-    "@typexs/server": "^2.2.1-dev.13",
-    "@typexs/storage": "^2.2.1-dev.13"
+    "@typexs/server": "2.2.1-dev.14",
+    "@typexs/storage": "2.2.1-dev.14"
   },
   "peerDependencies": {
     "@elastic/elasticsearch": "^7.15.0"
