--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/storage",
-  "version": "2.2.1-dev.13",
+  "version": "2.2.1-dev.14",
   "description": "Storage for typexs",
   "main": "./index",
   "browser": "./browser",
@@ -29,13 +29,13 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "dependencies": {
-    "@typexs/roles-api": "^2.2.1-dev.13"
+    "@typexs/roles-api": "2.2.1-dev.14"
   },
   "devDependencies": {
-    "@typexs/base": "^2.2.1-dev.22",
-    "@typexs/forms": "^2.2.1-dev.13",
-    "@typexs/server": "^2.2.1-dev.13",
-    "@typexs/testing": "^2.2.1-dev.13"
+    "@typexs/base": "2.2.1-dev.23",
+    "@typexs/forms": "2.2.1-dev.14",
+    "@typexs/server": "2.2.1-dev.14",
+    "@typexs/testing": "2.2.1-dev.14"
   },
   "peerDependencies": {
     "@typexs/base": "^2.2.1-dev.22",
