--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "npx lerna run test --concurrency=1",
     "build": "npx lerna run build",
     "fix-versions": "node scripts/fix-versions.js",
-    "publish": "npx lerna publish from-package",
+    "publish:packages": "npx lerna publish from-package",
     "documentation": "npx antora --stacktrace generate --clean --fetch --log-level all --to-dir docs/build/site",
     "documentation:watch": "npx nodemon --watch docs -e adoc --exec npm run documentation -- docs/antora-playbook.yml"
   },
