--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,8 +44,7 @@ pages:
       - public
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $JOB_NAME == "update docs"'
-    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_TAG'
-    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_BRANCH == "master"'
+    - if: '$CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_BRANCH == "master" && $CI_COMMIT_TAG == null'
       changes:
         - .gitlab-ci.yml
         - docs/**
